<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.sourcewriters.spigot.rwg</groupId>
	<artifactId>legacy-api</artifactId>
	<version>4.1.0</version>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub OWNER Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/SourceWriters/RealisticWorldGenerator-Api</url>
		</repository>
	</distributionManagement>

	<repositories>
		<!-- This adds the Spigot Maven repository to the build -->
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>minecraft-libraries</id>
			<url>https://libraries.minecraft.net</url>
		</repository>
	</repositories>

	<dependencies>

		<!-- Syntax Api -->

		<dependency>
			<groupId>com.syntaxphoenix.syntaxapi</groupId>
			<artifactId>nbt</artifactId>
			<version>2.0.10</version>
		</dependency>
		<dependency>
			<groupId>com.syntaxphoenix.syntaxapi</groupId>
			<artifactId>version</artifactId>
			<version>2.0.10</version>
		</dependency>
		<dependency>
			<groupId>com.syntaxphoenix.syntaxapi</groupId>
			<artifactId>general</artifactId>
			<version>2.0.10</version>
		</dependency>
		<dependency>
			<groupId>com.syntaxphoenix.syntaxapi</groupId>
			<artifactId>random</artifactId>
			<version>2.0.9</version>
		</dependency>
		<dependency>
			<groupId>com.syntaxphoenix.syntaxapi</groupId>
			<artifactId>key</artifactId>
			<version>2.0.9</version>
		</dependency>
		<dependency>
			<groupId>com.syntaxphoenix.syntaxapi</groupId>
			<artifactId>logging</artifactId>
			<version>2.0.9</version>
		</dependency>
		<dependency>
			<groupId>com.syntaxphoenix.syntaxapi</groupId>
			<artifactId>json-lib</artifactId>
			<version>2.0.9</version>
		</dependency>

		<!-- Server Software -->

		<dependency>
			<groupId>com.mojang</groupId>
			<artifactId>authlib</artifactId>
			<version>1.5.25</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<artifactId>snakeyaml</artifactId>
					<groupId>org.yaml</groupId>
				</exclusion>
				<exclusion>
					<artifactId>gson</artifactId>
					<groupId>com.google.code.gson</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.17-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<pluginRepositories>
		<pluginRepository>
			<id>apache.snapshots</id>
			<url>https://repository.apache.org/snapshots/</url>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>

	<profiles>
		<profile>
			<id>shade</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<property>
					<name>skipShade</name>
					<value>false</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>3.3.0-SNAPSHOT</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
							<createDependencyReducedPom>true</createDependencyReducedPom>
							<relocations>
								<relocation>
									<pattern>com.syntaxphoenix.syntaxapi</pattern>
									<shadedPattern>net.sourcewriters.spigot.rwg.legacy.shaded.synapi</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>no-shade</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<property>
					<name>skipShade</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>3.3.0-SNAPSHOT</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
							<createDependencyReducedPom>true</createDependencyReducedPom>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>